# retarget

./: API_SKETCH.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: interception_story.rs
examples/screenshot_agent/: Cargo.toml  README.md
examples/screenshot_agent/src/: lib.rs
macros/: Cargo.toml
macros/src/: args.rs  callable.rs  expand.rs  lib.rs  observe.rs  support.rs
src/: com.rs  function.rs  lib.rs  main.rs  objc.rs  registry.rs
src/imp/: mod.rs
src/imp/com/: mod.rs
src/imp/function/: mod.rs  unix.rs  windows.rs
src/imp/objc/: mod.rs
src/registry/: intercept.rs  mod.rs
tests/: com.rs  dynamic_loaded_after_install.rs  dynamic_loaded_before_install.rs  dynamic_unscoped.rs  interception.rs  objc_runtime.rs  probe_hook.rs  static_loaded.rs  ui.rs
tests/fixtures/: hook_test_caller.c  hook_test_target.c
tests/goals/: macos_support.rs  windows_dynamic_support.rs
tests/goals/dynamic_loaded_after_install/: macos.rs  windows.rs
tests/goals/dynamic_loaded_before_install/: macos.rs  windows.rs
tests/goals/objc_runtime/: macos.rs
tests/goals/probe_hook/: macos.rs  windows.rs
tests/goals/static_loaded/: macos.rs  windows.rs
tests/support/: linked.rs  mod.rs
tests/ui/common/: function_missing_function.rs  function_missing_function.stderr  function_unsupported_argument.rs  function_unsupported_argument.stderr  observe_invalid_mode.rs  observe_invalid_mode.stderr
tests/ui/macos/: objc_impl_missing_class.rs  objc_impl_missing_class.stderr  objc_impl_without_hook_methods.rs  objc_impl_without_hook_methods.stderr  objc_missing_selector.rs  objc_missing_selector.stderr
tools/dobby-api-race/: Cargo.toml
tools/dobby-api-race/src/: main.rs
tools/dobby-clean-race/: Cargo.toml  build.rs
tools/dobby-clean-race/src/: main.rs
