[package]
name = "retarget"
version = "0.1.1"
edition = "2024"
description = "Work-in-progress cross-platform function, Objective-C, and COM hooking for macOS and Windows."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/veecore/retarget"
keywords = ["hooking", "interpose", "detour", "objc", "com"]
categories = ["api-bindings", "development-tools::debugging"]
build = "build.rs"

[workspace]

[features]
default = ["registry", "auto-prime"]
registry = ["dep:linkme"]
auto-prime = []

[dependencies]
retarget_macros = { version = "0.1.1", path = "macros" }
linkme = { version = "0.3", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-core = "0.62.2"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
] }

[target.'cfg(target_os = "windows")'.dev-dependencies]
windows = { version = "0.62.2", features = [
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
] }

[dev-dependencies]
trybuild = "1"

[build-dependencies]
cc = "1"
