[package]
name = "retarget_macros"
version = "0.1.0"
edition = "2024"
description = "Proc macros for the retarget hook crate."
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/veecore/retarget"
keywords = ["hooking", "proc-macro", "objc", "com", "detour"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
